test_programs/compile_failure/noirc_frontend_tests_unused_items_errors_on_unused_trait/src/main.nr

    trait Foo {}
    trait Bar {}

    pub struct Baz {
    }

    impl Bar for Baz {}

    fn main() {
    }
    